--- a/mall-auth-server/src/main/resources/templates/login.html
+++ b/mall-auth-server/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="/static/login/JD_sass/JD1.css" />
 		<script src="/static/login/JD_js/jquery-3.1.1.min.js" type="text/javascript" charset="utf-8"></script>
-		<title>gulimall</title>
+		<title>MALL</title>
 	</head>
 	<body>
 		<!--顶部logo-->
@@ -79,7 +79,7 @@
 				<div class="si_out">
 					<ul>
 						<li>
-							<a href="https://api.weibo.com/oauth2/authorize?client_id=2144471074&response_type=code&redirect_uri=http://auth.gulimall.com/oauth2.0/weibo/success">
+							<a href="https://api.weibo.com/oauth2/authorize?client_id=1169509120&response_type=code&redirect_uri=http://auth.mall.com/oauth2.0/weibo/success">
 								<img style="width: 50px;height: 18px;" src="/static/login/JD_img/weibo.png" />
 <!--								<span>微博</span>-->
 							</a>
