--- a/mall-order/src/main/resources/templates/pay.html
+++ b/mall-order/src/main/resources/templates/pay.html
@@ -97,10 +97,10 @@
       <div class="Jd_footer">
         <ul>
           <li>
-            <img src="/static/order/pay/img\weixin.png" alt="">微信支付
+            <img src="/static/order/pay/img/weixin.png" alt="">微信支付
           </li>
 		  <li>
-            <img src="/static/order/pay/img\zhifubao.png" style="weight:auto;height:30px;" alt="">
+            <img src="/static/order/pay/img/zhifubao.png" style="weight:auto;height:30px;" alt="">
             <a th:href="'http://order.mall.com/aliPayOrder?orderSn='+${order.getOrderSn()}">支付宝</a>
           </li>
         </ul>
